--- a/index.html
+++ b/index.html
@@ -3,215 +3,234 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App Inventor Fusion Studio</title>
+    <title>AI2 Collab Studio</title>
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
     <style>
+        :root {
+            --primary: #1976d2;
+            --background: #1e1e1e;
+            --surface: #2d2d2d;
+            --text-primary: #e0e0e0;
+            --text-secondary: #9e9e9e;
+            --radius: 8px;
+            --spacing: 16px;
+        }
+
         body {
-            font-family: Arial, sans-serif;
+            background: var(--background);
+            color: var(--text-primary);
+            font-family: 'Segoe UI', system-ui, sans-serif;
             margin: 0;
-            padding: 0;
             display: flex;
             flex-direction: column;
-            height: 100vh;
-            background-color: #1e1e1e;
-            color: #dcdcdc;
-        }
-
-        #container {
-            display: flex;
-            flex: 1;
-            min-height: 80vh;
-            margin-top: 10px;
-        }
-
-        #editor-container {
-            flex: 1;
-            background-color: #1e1e1e;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-        }
-
-        #file-tree {
-            width: 200px;
-            background: #2d2d2d;
-            padding: 10px;
-            overflow-y: auto;
-            border-radius: 5px;
-            margin-left: 10px;
-        }
-
-        button {
-            padding: 10px 20px;
-            margin-top: 20px;
-            cursor: pointer;
-            background-color: #007acc;
-            border: none;
-            color: white;
-            font-size: 16px;
-            border-radius: 5px;
+            min-height: 100vh;
         }
 
         .github-corner {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 50px;
-            height: 50px;
-            background-color: transparent;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            text-decoration: none;
-        }
-
-        .github-corner i {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: var(--primary);
             color: white;
-        }
-
-        #fileList {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        #fileList li {
-            padding: 5px;
-            cursor: pointer;
-            margin: 2px 0;
-            background-color: #3b3b3b;
-            border-radius: 5px;
-        }
-
-        #fileList li:hover {
-            background-color: #007acc;
-        }
-
-        .button-container {
+            padding: 12px 20px;
+            border-radius: 30px;
             display: flex;
-            justify-content: space-around;
-            margin-top: 50px;
+            align-items: center;
+            gap: 8px;
+            text-decoration: none;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
+
+        .editor-container {
+            display: grid;
+            grid-template-columns: 240px 1fr;
+            gap: var(--spacing);
+            height: calc(100vh - 80px);
+            padding: var(--spacing);
+        }
+
+        .file-tree {
+            background: var(--surface);
+            border-radius: var(--radius);
+            padding: var(--spacing);
+            overflow-y: auto;
+        }
+
+        .monaco-container {
+            background: var(--surface);
+            border-radius: var(--radius);
+            overflow: hidden;
+        }
+
+        .toolbar {
+            padding: var(--spacing);
+            background: var(--surface);
+            display: flex;
+            gap: 12px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .file-item {
+            padding: 8px 12px;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: background 0.2s;
+        }
+
+        .file-item:hover {
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .file-item.active {
+            background: var(--primary);
+            color: white;
         }
     </style>
 </head>
 <body>
-
-    <a href="https://github.com/SirHumza/AppInventor-Fusion/" 
+    <a href="https://github.com/SirHumza/AI2-Collab-Studio" 
        target="_blank" 
        class="github-corner">
         <i class="fab fa-github"></i>
-        <span class="github-text">Made by SirHumza</span>
+        <span>GitHub</span>
     </a>
 
-    <div class="button-container">
-        <button id="newAppBtn">New App</button>
-        <button id="importFileBtn">Import File</button>
-        <button id="openSavedBtn">Open Saved</button>
+    <div class="toolbar">
+        <button class="btn btn-primary" onclick="newProject()">
+            <i class="fas fa-plus"></i> New
+        </button>
+        <button class="btn btn-success" onclick="exportProject()">
+            <i class="fas fa-file-export"></i> Export
+        </button>
+        <input type="file" id="importInput" hidden accept=".aia">
+        <button class="btn btn-warning" onclick="document.getElementById('importInput').click()">
+            <i class="fas fa-file-import"></i> Import
+        </button>
     </div>
 
-    <div id="container">
-        <div id="file-tree">
-            <h3>Files</h3>
-            <ul id="fileList"></ul>
+    <div class="editor-container">
+        <div class="file-tree">
+            <div class="mb-3">
+                <h5>Project Files</h5>
+                <small class="text-muted" id="projectName">Untitled Project</small>
+            </div>
+            <div id="fileList" class="list-unstyled"></div>
         </div>
-        <div id="editor-container"></div>
+        <div class="monaco-container">
+            <div id="editor" style="height: 100%;"></div>
+        </div>
     </div>
 
     <script>
-        // Store files in memory (simulating a backend for this demo)
-        const projectFiles = {
-            'index.html': '<html><body><h1>Hello World!</h1></body></html>',
-            'script.js': 'console.log("Hello World!");',
-            'style.css': 'body { background-color: lightblue; }',
-            'project.bky': '/* Blockly code here */',
-            'screen.scm': '/* Screen layout code here */'
+        let currentProject = {
+            name: 'Untitled Project',
+            files: {},
+            currentFile: null
         };
 
-        const fileTree = document.getElementById('fileList');
-        let currentFile = '';
         let editor;
-        let autoSaveInterval;
 
-        // Monaco Editor Initialization
+        // Initialize Monaco Editor
         require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs' } });
-        require(['vs/editor/editor.main'], function () {
-            editor = monaco.editor.create(document.getElementById('editor-container'), {
-                value: '',
+        require(['vs/editor/editor.main'], () => {
+            editor = monaco.editor.create(document.getElementById('editor'), {
+                value: '// Select a file to start editing',
                 language: 'javascript',
                 theme: 'vs-dark',
-                automaticLayout: true
+                automaticLayout: true,
+                minimap: { enabled: true }
             });
         });
 
-        // Autosave functionality every 10 seconds
-        function autoSave() {
-            if (currentFile && (currentFile.endsWith('.scm') || currentFile.endsWith('.bky'))) {
-                const updatedContent = editor.getValue();
-                projectFiles[currentFile] = updatedContent;
-                console.log("Auto-saved:", currentFile);
+        // File import handling
+        document.getElementById('importInput').addEventListener('change', async (e) => {
+            const file = e.target.files[0];
+            if (!file) return;
+
+            try {
+                const zip = await JSZip.loadAsync(file);
+                currentProject = {
+                    name: file.name.replace('.aia', ''),
+                    files: {},
+                    currentFile: null
+                };
+
+                // Process ZIP contents
+                zip.forEach(async (relativePath) => {
+                    const content = await zip.file(relativePath).async('string');
+                    currentProject.files[relativePath] = content;
+                });
+
+                updateFileTree();
+                document.getElementById('projectName').textContent = currentProject.name;
+            } catch (error) {
+                alert('Error loading project: ' + error.message);
             }
+        });
+
+        // Export project as .aia
+        async function exportProject() {
+            const zip = new JSZip();
+            
+            // Add all files to ZIP
+            Object.entries(currentProject.files).forEach(([path, content]) => {
+                zip.file(path, content);
+            });
+
+            // Generate and download
+            const content = await zip.generateAsync({ type: 'blob' });
+            const link = document.createElement('a');
+            link.href = URL.createObjectURL(content);
+            link.download = `${currentProject.name}.aia`;
+            link.click();
         }
 
-        // Start autosave every 10 seconds
-        function startAutoSave() {
-            if (autoSaveInterval) {
-                clearInterval(autoSaveInterval);
-            }
-            autoSaveInterval = setInterval(autoSave, 10000); // Autosave every 10 seconds
+        function newProject() {
+            currentProject = {
+                name: 'New Project',
+                files: {
+                    'src/Screen1.scm': '// New Screen',
+                    'src/Screen1.bky': '// Blocks content',
+                    'assets/icon.png': ''
+                },
+                currentFile: null
+            };
+            updateFileTree();
+            document.getElementById('projectName').textContent = currentProject.name;
         }
 
-        // Load file content into the editor
-        function openFile(fileName) {
-            currentFile = fileName;
-            const fileContent = projectFiles[fileName];
-            editor.setValue(fileContent);
-            startAutoSave(); // Start autosave when file is opened
+        function updateFileTree() {
+            const fileList = document.getElementById('fileList');
+            fileList.innerHTML = '';
+            
+            Object.keys(currentProject.files).forEach(path => {
+                const li = document.createElement('div');
+                li.className = 'file-item' + (path === currentProject.currentFile ? ' active' : '');
+                li.textContent = path;
+                li.onclick = () => openFile(path);
+                fileList.appendChild(li);
+            });
         }
 
-        // Save file content when changes occur
+        function openFile(path) {
+            currentProject.currentFile = path;
+            editor.setValue(currentProject.files[path]);
+            updateFileTree();
+        }
+
+        // Auto-save changes
         editor.onDidChangeModelContent(() => {
-            const updatedContent = editor.getValue();
-            if (currentFile) {
-                projectFiles[currentFile] = updatedContent; // Save to in-memory files
+            if (currentProject.currentFile) {
+                currentProject.files[currentProject.currentFile] = editor.getValue();
             }
         });
 
-        // Button Actions
-        document.getElementById('newAppBtn').addEventListener('click', () => {
-            alert("Creating a new App...");
-            // Logic for creating a new app
-            projectFiles['newApp.html'] = '<html><body><h1>New App</h1></body></html>';
-            refreshFileTree();
-        });
-
-        document.getElementById('importFileBtn').addEventListener('click', () => {
-            alert("Importing a file...");
-            // Logic for importing files, simulation only
-            projectFiles['importedFile.js'] = 'console.log("Imported File");';
-            refreshFileTree();
-        });
-
-        document.getElementById('openSavedBtn').addEventListener('click', () => {
-            alert("Opening saved project...");
-            // Logic for opening a saved project (demoing with in-memory files)
-            refreshFileTree();
-        });
-
-        // Refresh file tree display
-        function refreshFileTree() {
-            fileTree.innerHTML = '';
-            Object.keys(projectFiles).forEach(fileName => {
-                const li = document.createElement('li');
-                li.textContent = fileName;
-                li.addEventListener('click', () => openFile(fileName));
-                fileTree.appendChild(li);
-            });
-        }
-
-        // Initialize file tree
-        refreshFileTree();
+        // Initialize empty project
+        newProject();
     </script>
-
 </body>
 </html>
