--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI2 Collab Studio</title>
+
+    <!-- Monaco Editor CDN -->
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.34.1/min/vs/loader.js"></script>
+
+    <!-- JSZip CDN (make sure it's loaded before any JS that depends on it) -->
     <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
+
+    <!-- Bootstrap and FontAwesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <style>
+        /* Styling as before */
         :root {
             --primary: #1976d2;
             --background: #1e1e1e;
@@ -18,7 +26,6 @@
             --radius: 8px;
             --spacing: 16px;
         }
-
         body {
             background: var(--background);
             color: var(--text-primary);
@@ -28,108 +35,101 @@
             flex-direction: column;
             min-height: 100vh;
         }
-
-        .github-corner {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: var(--primary);
-            color: white;
-            padding: 12px 20px;
-            border-radius: 30px;
+        header {
+            background-color: var(--primary);
+            color: var(--text-primary);
+            padding: var(--spacing);
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            gap: 8px;
-            text-decoration: none;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
         }
-
-        .editor-container {
-            display: grid;
-            grid-template-columns: 240px 1fr;
-            gap: var(--spacing);
-            height: calc(100vh - 80px);
+        header h1 {
+            font-size: 1.5rem;
+        }
+        #fileList {
             padding: var(--spacing);
-        }
-
-        .file-tree {
-            background: var(--surface);
+            background-color: var(--surface);
             border-radius: var(--radius);
-            padding: var(--spacing);
+            flex-grow: 1;
             overflow-y: auto;
         }
-
-        .monaco-container {
-            background: var(--surface);
-            border-radius: var(--radius);
-            overflow: hidden;
-        }
-
-        .toolbar {
-            padding: var(--spacing);
-            background: var(--surface);
-            display: flex;
-            gap: 12px;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
         .file-item {
-            padding: 8px 12px;
+            padding: 8px;
+            border: 1px solid var(--surface);
+            border-radius: var(--radius);
+            margin: 4px 0;
             cursor: pointer;
-            border-radius: 4px;
-            transition: background 0.2s;
+            background-color: #333;
+            color: var(--text-primary);
         }
-
         .file-item:hover {
-            background: rgba(255, 255, 255, 0.05);
+            background-color: var(--primary);
         }
-
         .file-item.active {
-            background: var(--primary);
-            color: white;
+            background-color: var(--primary);
+            color: var(--text-primary);
         }
-
-        .binary-warning {
-            color: #ff6b6b;
-            padding: 20px;
-            text-align: center;
+        .editor-container {
+            padding: var(--spacing);
+            flex-grow: 3;
+        }
+        .editor-container .monaco-editor {
+            height: 100%;
+        }
+        #editor {
+            background-color: var(--surface);
+            border-radius: var(--radius);
+            width: 100%;
+            height: 500px;
+        }
+        footer {
+            padding: var(--spacing);
+            background-color: var(--primary);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: var(--text-primary);
         }
     </style>
 </head>
 <body>
-    <a href="https://github.com/SirHumza/AI2-Collab-Studio" 
-       target="_blank" 
-       class="github-corner">
-        <i class="fab fa-github"></i>
-        <span>GitHub</span>
-    </a>
 
-    <div class="toolbar">
-        <button class="btn btn-primary" onclick="newProject()">
-            <i class="fas fa-plus"></i> New
-        </button>
-        <button class="btn btn-success" onclick="exportProject()">
-            <i class="fas fa-file-export"></i> Export
-        </button>
-        <input type="file" id="importInput" hidden accept=".aia">
-        <button class="btn btn-warning" onclick="document.getElementById('importInput').click()">
-            <i class="fas fa-file-import"></i> Import
-        </button>
+    <header>
+        <h1>AI2 Collab Studio</h1>
+        <div>
+            <button id="newProjectBtn" class="btn btn-light">New Project</button>
+            <button id="importBtn" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#importModal">Import Project</button>
+            <button id="exportBtn" class="btn btn-light">Export Project</button>
+        </div>
+    </header>
+
+    <div class="container-fluid d-flex flex-column flex-md-row">
+        <div class="col-md-4">
+            <div id="fileList"></div>
+        </div>
+        <div class="col-md-8 editor-container">
+            <div id="editor"></div>
+        </div>
     </div>
 
-    <div class="editor-container">
-        <div class="file-tree">
-            <div class="mb-3">
-                <h5>Project Files</h5>
-                <small class="text-muted" id="projectName">Untitled Project</small>
+    <!-- Import Modal -->
+    <div class="modal fade" id="importModal" tabindex="-1" aria-labelledby="importModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="importModalLabel">Import Project</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="file" id="importInput" class="form-control" />
+                </div>
             </div>
-            <div id="fileList" class="list-unstyled"></div>
-        </div>
-        <div class="monaco-container">
-            <div id="editor" style="height: 100%;"></div>
         </div>
     </div>
+
+    <footer>
+        <p>AI2 Collab Studio - Powered by Monaco and JSZip</p>
+    </footer>
 
     <script>
         let currentProject = {
@@ -159,6 +159,11 @@
             if (!file) return;
 
             try {
+                // Make sure JSZip is defined and loaded
+                if (typeof JSZip === 'undefined') {
+                    throw new Error('JSZip is not loaded.');
+                }
+
                 const zip = await JSZip.loadAsync(file);
                 currentProject = {
                     name: file.name.replace('.aia', ''),
@@ -266,8 +271,12 @@
             }
         });
 
-        // Initialize empty project
-        newProject();
+        // Button listeners
+        document.getElementById('newProjectBtn').addEventListener('click', newProject);
+        document.getElementById('exportBtn').addEventListener('click', exportProject);
     </script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
